# MicrophoneSoftware_QT

./: .gitignore
Debug/MicrophoneArray_autogen/: moc_predefs.h  mocs_compilation.cpp
Debug/MicrophoneArray_autogen/EWIEGA46WW/: moc_comminterface.cpp  moc_communicationethernet.cpp  moc_communicationserial.cpp  moc_commwarnable.cpp  moc_data.cpp  moc_microphonearraywindow.cpp
Debug/MicrophoneArray_autogen/include/: ui_microphonearraywindow.h
MicrophoneArray/: .gitignore  CMakeLists.txt  aquisition.cpp  aquisition.h  aquisitioncfg.cpp  comminterface.cpp  comminterface.h  communicationethernet.cpp  communicationethernet.h  communicationserial.cpp  commwarnable.h  main.cpp  microphonearraycfg.cpp  microphonearraycfg.h  microphonearraywindow.cpp  microphonearraywindow.h  microphonearraywindow.ui  microphoneboard.cpp  microphoneboard.h
MicrophoneArray/UML/: microphone_array.vpp  microphone_array.vpp.bak_000f
MicrophoneArray_Javafx/: windows.fxml
MicrophoneArray_Matlab/: MicrophoneArray.mlapp
MicrophoneArray_qt/: CMakeLists.txt  aquisition.cpp  aquisition.h  aquisitioncfg.cpp  aquisitioncfg.h  comminterface.h  communicationethernet.h  communicationserial.h  commwarnable.cpp  commwarnable.h  data.cpp  data.h  microphonearraycfg.cpp  microphonearraycfg.h  microphonearraywindow.h  microphonearraywindow.ui  microphoneboard.cpp  microphoneboard.h
UML/: microphone_array.vpp
